# zep-by-example

./: .gitignore  README.md
archive/: README.md
archive/end-to-end-examples/python/: pyproject.toml  user_example.py
archive/extractors/entities/: requirements.txt
archive/extractors/hybrid_search/: hybrid_search.ipynb
archive/langchain/js/: tsconfig.json
archive/langchain/js/books/: jules-verne-from-the-earth-to-the-moon.txt  kurt-vonnegut-the-big-trip-up-yonder.txt  philip-k-dick-beyond-lies-the-wub.txt
archive/langchain/js/src/: history.ts
archive/langchain/python/intent_router/: intent_router.ipynb  main.py  requirements.txt
archive/langchain/python/langsmith-latency/: analysis-charting.ipynb  chat_history.py
archive/langchain/python/memory-in-action/: memory-in-action.ipynb  pyproject.toml
archive/langchain/python/schema_extraction/: output.txt  pyproject.toml
chatbots/simple-with-memory-chainlit/: app.py  pyproject.toml
end-to-end-examples/python/: pyproject.toml
extractors/entities/: entity_extractor.ipynb
extractors/hybrid_search/: requirements.txt
langchain/js/: index.ts  package.json  tsconfig.json
langchain/js/src/: index.ts
langchain/python/intent_router/: main.py
langchain/python/langsmith-latency/: langsmith-latency.ipynb  pyproject.toml  retriever_memory_latency_test.py  summary_memory_latency_test.py
langchain/python/memory-in-action/: memory-in-action.ipynb  pyproject.toml
langchain/python/schema_extraction/: main.py  pyproject.toml  schema_extractor_memory.py
structured-data-extraction/python/: requirements.txt  sales_order.ipynb
