[tool.poetry]
name = "memory-in-action"
version = "0.1.0"
description = ""
authors = ["Daniel Chalef <131175+danielchalef@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
langchain = "^0.1.11"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
zep-python = "^0.33"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}
promptlayer = "^0.1.90"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
